Finalize resolver logic