@@ -1,30 +1,42 @@
 package com.linkedin.datahub.graphql.resolvers.auth;
 
-import static com.linkedin.datahub.graphql.resolvers.ResolverUtils.*;
+import static com.linkedin.metadata.Constants.*;
 
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.EntityRelationship;
 import com.linkedin.common.EntityRelationships;
 import com.linkedin.common.urn.Urn;
+import com.linkedin.data.template.StringArray;
 import com.linkedin.datahub.graphql.QueryContext;
 import com.linkedin.datahub.graphql.authorization.AuthorizationUtils;
 import com.linkedin.datahub.graphql.exception.AuthorizationException;
-import com.linkedin.datahub.graphql.generated.AndFilterInput;
 import com.linkedin.datahub.graphql.generated.DebugAccessResult;
-import com.linkedin.datahub.graphql.generated.FacetFilterInput;
-import com.linkedin.datahub.graphql.generated.FilterOperator;
+import com.linkedin.entity.EntityResponse;
 import com.linkedin.entity.client.EntityClient;
 import com.linkedin.metadata.Constants;
 import com.linkedin.metadata.graph.GraphClient;
+import com.linkedin.metadata.query.filter.Condition;
+import com.linkedin.metadata.query.filter.ConjunctiveCriterion;
+import com.linkedin.metadata.query.filter.ConjunctiveCriterionArray;
+import com.linkedin.metadata.query.filter.Criterion;
+import com.linkedin.metadata.query.filter.CriterionArray;
 import com.linkedin.metadata.query.filter.Filter;
 import com.linkedin.metadata.query.filter.RelationshipDirection;
 import com.linkedin.metadata.query.filter.SortCriterion;
 import com.linkedin.metadata.query.filter.SortOrder;
-import com.linkedin.metadata.search.SearchResult;
+import com.linkedin.metadata.search.SearchEntity;
+import com.linkedin.policy.DataHubPolicyInfo;
 import com.linkedin.r2.RemoteInvocationException;
 import graphql.schema.DataFetcher;
 import graphql.schema.DataFetchingEnvironment;
-import java.util.*;
+import java.net.URISyntaxException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
@@ -95,16 +107,44 @@ public class DebugAccessResolver implements DataFetcher<CompletableFuture<DebugA
       result.setRolesViaGroups(new ArrayList<>(rolesViaGroups));
       result.setAllRoles(new ArrayList<>(allRoles));
 
-      // TODO Filter for policy URNs that apply to user, group, role URNs
+      Set<Urn> policyUrns = getPoliciesFor(context, userUrn, groups, roles);
 
       // List of Policy that apply to this user directly or indirectly.
-      result.setPolicies(getPoliciesFor(context, userUrn, groups, roles));
+      result.setPolicies(policyUrns.stream().map(Urn::toString).collect(Collectors.toList()));
 
       // List of privileges that this user has directly or indirectly.
-      // result.setPrivileges();
+      result.setPrivileges(new ArrayList<>(getPrivileges(context, policyUrns)));
+
       return result;
     } catch (Exception e) {
       throw new RuntimeException(e);
+    }
+  }
+
+  private Set<String> getPrivileges(final QueryContext context, Set<Urn> policyUrns) {
+    try {
+      final Map<Urn, EntityResponse> policies =
+          _entityClient.batchGetV2(
+              Constants.POLICY_ENTITY_NAME,
+              policyUrns,
+              ImmutableSet.of(Constants.DATAHUB_POLICY_INFO_ASPECT_NAME),
+              context.getAuthentication());
+
+      return policies.keySet().stream()
+          .filter(Objects::nonNull)
+          .filter(key -> policies.get(key) != null)
+          .filter(key -> policies.get(key).hasAspects())
+          .map(key -> policies.get(key).getAspects())
+          .filter(aspectMap -> aspectMap.containsKey(DATAHUB_POLICY_INFO_ASPECT_NAME))
+          .map(
+              aspectMap ->
+                  new DataHubPolicyInfo(
+                      aspectMap.get(DATAHUB_POLICY_INFO_ASPECT_NAME).getValue().data()))
+          .map(DataHubPolicyInfo::getPrivileges)
+          .flatMap(List::stream)
+          .collect(Collectors.toSet());
+    } catch (URISyntaxException | RemoteInvocationException e) {
+      throw new RuntimeException("Failed to retrieve privileges from GMS", e);
     }
   }
 
@@ -123,7 +163,7 @@ public class DebugAccessResolver implements DataFetcher<CompletableFuture<DebugA
         urn, types, RelationshipDirection.OUTGOING, 0, 100, actor);
   }
 
-  private List<String> getPoliciesFor(
+  private Set<Urn> getPoliciesFor(
       final QueryContext context,
       final String user,
       final List<String> groups,
@@ -131,26 +171,77 @@ public class DebugAccessResolver implements DataFetcher<CompletableFuture<DebugA
       throws RemoteInvocationException {
     final SortCriterion sortCriterion =
         new SortCriterion().setField(LAST_UPDATED_AT_FIELD).setOrder(SortOrder.DESCENDING);
-    SearchResult searchResult =
-        _entityClient.search(
+    return _entityClient
+        .search(
             context.getOperationContext().withSearchFlags(flags -> flags.setFulltext(true)),
             Constants.POLICY_ENTITY_NAME,
             "",
             buildFilterToGetPolicies(user, groups, roles),
             sortCriterion,
             0,
-            10000);
-    return null;
+            10000)
+        .getEntities()
+        .stream()
+        .map(SearchEntity::getEntity)
+        .collect(Collectors.toSet());
   }
 
   private Filter buildFilterToGetPolicies(
       final String user, final List<String> groups, final List<String> roles) {
+
+    // setOr(array(andArray(user), andArray(groups), andArray(roles), andArray(allUsers),
+    // andArray(allGroups))
+    ConjunctiveCriterionArray conjunctiveCriteria = new ConjunctiveCriterionArray();
+
+    final CriterionArray allUsersAndArray = new CriterionArray();
+    allUsersAndArray.add(
+        new Criterion().setField("allUsers").setValue("true").setCondition(Condition.EQUAL));
+    conjunctiveCriteria.add(new ConjunctiveCriterion().setAnd(allUsersAndArray));
+
+    final CriterionArray allGroupsAndArray = new CriterionArray();
+    allGroupsAndArray.add(
+        new Criterion().setField("allGroups").setValue("true").setCondition(Condition.EQUAL));
+    conjunctiveCriteria.add(new ConjunctiveCriterion().setAnd(allGroupsAndArray));
+
+    if (user != null && !user.isEmpty()) {
+      final CriterionArray userAndArray = new CriterionArray();
+      userAndArray.add(
+          new Criterion().setField("users").setValue(user).setCondition(Condition.EQUAL));
+      conjunctiveCriteria.add(new ConjunctiveCriterion().setAnd(userAndArray));
+    }
+
+    if (groups != null && !groups.isEmpty()) {
+      final CriterionArray groupsAndArray = new CriterionArray();
+      groupsAndArray.add(
+          new Criterion()
+              .setField("groups")
+              .setValue("")
+              .setValues(new StringArray(groups))
+              .setCondition(Condition.EQUAL));
+      conjunctiveCriteria.add(new ConjunctiveCriterion().setAnd(groupsAndArray));
+    }
+
+    if (roles != null && !roles.isEmpty()) {
+      final CriterionArray rolesAndArray = new CriterionArray();
+      rolesAndArray.add(
+          new Criterion()
+              .setField("roles")
+              .setValue("")
+              .setValues(new StringArray(roles))
+              .setCondition(Condition.EQUAL));
+      conjunctiveCriteria.add(new ConjunctiveCriterion().setAnd(rolesAndArray));
+    }
+    return new Filter().setOr(conjunctiveCriteria);
+
+    /*
     final AndFilterInput globalCriteria = new AndFilterInput();
-    List<FacetFilterInput> andConditions = new ArrayList<>();
-    andConditions.add(
-        new FacetFilterInput(
-            "actors/users", null, ImmutableList.of(user), false, FilterOperator.EQUAL));
-    globalCriteria.setAnd(andConditions);
-    return buildFilter(Collections.emptyList(), ImmutableList.of(globalCriteria));
+    List<FacetFilterInput> orConditions = new ArrayList<>();
+
+    orConditions.add(new FacetFilterInput("users", null, List.of(user), false, FilterOperator.EQUAL));
+    orConditions.add(new FacetFilterInput("groups", null, groups, false, FilterOperator.EQUAL));
+    orConditions.add(new FacetFilterInput("roles", null, roles, false, FilterOperator.EQUAL));
+    globalCriteria.setAnd(orConditions);
+    return buildFilter(Collections.emptyList(), List.of(globalCriteria));
+    */
   }
 }
